added codeguy image

--- a/s3-static-website-hosting-main/index.html
+++ b/s3-static-website-hosting-main/index.html
@@ -298,7 +298,7 @@
                     <img src="assets/default-user.png" alt="User Picture" />
                   </div>
                 </div>
-                <span class="story__user">QuantumCode</span>
+                <span class="story__user">codeguy</span>
               </button>
               <button class="story story--has-story">
                 <div class="story__avatar">
@@ -315,7 +315,7 @@
                     <img src="assets/default-user.png" alt="User Picture" />
                   </div>
                 </div>
-                <span class="story__user">QuantumCode</span>
+                <span class="story__user">codeguy</span>
               </button>
               <button class="story story--has-story">
                 <div class="story__avatar">
@@ -332,7 +332,7 @@
                     <img src="assets/default-user.png" alt="User Picture" />
                   </div>
                 </div>
-                <span class="story__user">QuantumCode</span>
+                <span class="story__user">codeguy</span>
               </button>
               <button class="story">
                 <div class="story__avatar">
@@ -349,7 +349,7 @@
                     <img src="assets/default-user.png" alt="User Picture" />
                   </div>
                 </div>
-                <span class="story__user">QuantumCode</span>
+                <span class="story__user">codeguy</span>
               </button>
               <button class="story">
                 <div class="story__avatar">
@@ -366,7 +366,7 @@
                     <img src="assets/default-user.png" alt="User Picture" />
                   </div>
                 </div>
-                <span class="story__user">QuantumCode</span>
+                <span class="story__user">codeguy</span>
               </button>
               <button class="story">
                 <div class="story__avatar">
@@ -383,7 +383,7 @@
                     <img src="assets/default-user.png" alt="User Picture" />
                   </div>
                 </div>
-                <span class="story__user">QuantumCode</span>
+                <span class="story__user">codeguy</span>
               </button>
               <button class="story">
                 <div class="story__avatar">
@@ -400,7 +400,7 @@
                     <img src="assets/default-user.png" alt="User Picture" />
                   </div>
                 </div>
-                <span class="story__user">QuantumCode</span>
+                <span class="story__user">codeguy</span>
               </button>
               <button class="story">
                 <div class="story__avatar">
@@ -417,7 +417,7 @@
                     <img src="assets/default-user.png" alt="User Picture" />
                   </div>
                 </div>
-                <span class="story__user">QuantumCode</span>
+                <span class="story__user">codeguy</span>
               </button>
               <button class="story">
                 <div class="story__avatar">
@@ -434,7 +434,7 @@
                     <img src="assets/default-user.png" alt="User Picture" />
                   </div>
                 </div>
-                <span class="story__user">QuantumCode</span>
+                <span class="story__user">codeguy</span>
               </button>
               <button class="story">
                 <div class="story__avatar">
@@ -451,7 +451,7 @@
                     <img src="assets/default-user.png" alt="User Picture" />
                   </div>
                 </div>
-                <span class="story__user">QuantumCode0</span>
+                <span class="story__user">codeguy0</span>
               </button>
               <button class="story">
                 <div class="story__avatar">
@@ -468,7 +468,7 @@
                     <img src="assets/default-user.png" alt="User Picture" />
                   </div>
                 </div>
-                <span class="story__user">QuantumCode</span>
+                <span class="story__user">codeguy</span>
               </button>
               <button class="story">
                 <div class="story__avatar">
@@ -485,7 +485,7 @@
                     <img src="assets/default-user.png" alt="User Picture" />
                   </div>
                 </div>
-                <span class="story__user">QuantumCode</span>
+                <span class="story__user">codeguy</span>
               </button>
               <button class="story">
                 <div class="story__avatar">
@@ -502,7 +502,7 @@
                     <img src="assets/default-user.png" alt="User Picture" />
                   </div>
                 </div>
-                <span class="story__user">QuantumCode</span>
+                <span class="story__user">codeguy</span>
               </button>
               <button class="story">
                 <div class="story__avatar">
@@ -519,7 +519,7 @@
                     <img src="assets/default-user.png" alt="User Picture" />
                   </div>
                 </div>
-                <span class="story__user">QuantumCode</span>
+                <span class="story__user">codeguy</span>
               </button>
               <button class="story">
                 <div class="story__avatar">
@@ -536,7 +536,7 @@
                     <img src="assets/default-user.png" alt="User Picture" />
                   </div>
                 </div>
-                <span class="story__user">QuantumCode</span>
+                <span class="story__user">codeguy</span>
               </button>
             </div>
             <button class="stories__right-button">
@@ -554,17 +554,17 @@
               <div class="post__header">
                 <div class="post__profile">
                   <a
-                    href="https://github.com/QuantumCode"
+                    href="https://github.com/codeguy"
                     target="_blank"
                     class="post__avatar"
                   >
                     <img src="assets/default-user.png" alt="User Picture" />
                   </a>
                   <a
-                    href="https://github.com/QuantumCode"
+                    href="https://github.com/codeguy"
                     target="_blank"
                     class="post__user"
-                    >QuantumCode</a
+                    >codeguy</a
                   >
                 </div>
 
@@ -695,9 +695,9 @@
                     <span>
                       <a
                         class="post__name--underline"
-                        href="https://github.com/QuantumCode"
+                        href="https://github.com/codeguy"
                         target="_blank"
-                        >QuantumCode</a
+                        >codeguy</a
                       >
                       Responsive clone of Instagram UI. Made with ❤ for study
                       purposes.
@@ -714,7 +714,7 @@
                   <a href="#" class="post__avatar">
                     <img src="assets/default-user.png" alt="User Picture" />
                   </a>
-                  <a href="#" class="post__user">QuantumCode</a>
+                  <a href="#" class="post__user">codeguy</a>
                 </div>
 
                 <button class="post__more-options">
@@ -852,7 +852,7 @@
 
                   <div class="post__description">
                     <span>
-                      <a class="post__name--underline" href="#">QuantumCode</a>
+                      <a class="post__name--underline" href="#">codeguy</a>
                       Multiple media post example. This post has three images!
                     </span>
                   </div>
@@ -867,7 +867,7 @@
                   <a href="#" class="post__avatar">
                     <img src="assets/default-user.png" alt="User Picture" />
                   </a>
-                  <a href="#" class="post__user">QuantumCode</a>
+                  <a href="#" class="post__user">codeguy</a>
                 </div>
 
                 <button class="post__more-options">
@@ -995,7 +995,7 @@
 
                   <div class="post__description">
                     <span>
-                      <a class="post__name--underline" href="#">QuantumCode</a>
+                      <a class="post__name--underline" href="#">codeguy</a>
                       Single media post example.
                     </span>
                   </div>
@@ -1010,7 +1010,7 @@
                   <a href="#" class="post__avatar">
                     <img src="assets/default-user.png" alt="User Picture" />
                   </a>
-                  <a href="#" class="post__user">QuantumCode</a>
+                  <a href="#" class="post__user">codeguy</a>
                 </div>
 
                 <button class="post__more-options">
@@ -1153,7 +1153,7 @@
 
                   <div class="post__description">
                     <span>
-                      <a class="post__name--underline" href="#">QuantumCode</a>
+                      <a class="post__name--underline" href="#">codeguy</a>
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
                       Similique laudantium consequuntur vitae impedit eaque?
                       Accusantium rerum vel ducimus perspiciatis nesciunt a
@@ -1172,7 +1172,7 @@
                   <a href="#" class="post__avatar">
                     <img src="assets/default-user.png" alt="User Picture" />
                   </a>
-                  <a href="#" class="post__user">QuantumCode</a>
+                  <a href="#" class="post__user">codeguy</a>
                 </div>
 
                 <button class="post__more-options">
@@ -1305,7 +1305,7 @@
 
                   <div class="post__description">
                     <span>
-                      <a class="post__name--underline" href="#">QuantumCode</a>
+                      <a class="post__name--underline" href="#">codeguy</a>
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
                       Ducimus voluptates expedita ab vel dolore voluptatem rerum
                       repudiandae unde temporibus sed quos quis illo, dolores
@@ -1323,15 +1323,15 @@
         <section class="side-menu">
           <div class="side-menu__user-profile">
             <a
-              href="https://github.com/QuantumCode"
+              href="https://github.com/codeguy"
               target="_blank"
               class="side-menu__user-avatar"
             >
               <img src="assets/default-user.png" alt="User Picture" />
             </a>
             <div class="side-menu__user-info">
-              <a href="https://github.com/QuantumCode" target="_blank"
-                >QuantumCode</a
+              <a href="https://github.com/codeguy" target="_blank"
+                >codeguy</a
               >
               <span>Leonardo Costa</span>
             </div>
@@ -1349,7 +1349,7 @@
                   <img src="assets/default-user.png" alt="User Picture" />
                 </a>
                 <div class="side-menu__suggestion-info">
-                  <a href="#">QuantumCode</a>
+                  <a href="#">codeguy</a>
                   <span>Followed by kashdoll, saxdee and 98 others</span>
                 </div>
                 <button class="side-menu__suggestion-button">Follow</button>
@@ -1359,7 +1359,7 @@
                   <img src="assets/default-user.png" alt="User Picture" />
                 </a>
                 <div class="side-menu__suggestion-info">
-                  <a href="#">QuantumCode</a>
+                  <a href="#">codeguy</a>
                   <span>Followed by user1, user2 and 3 others</span>
                 </div>
                 <button class="side-menu__suggestion-button">Follow</button>
@@ -1369,7 +1369,7 @@
                   <img src="assets/default-user.png" alt="User Picture" />
                 </a>
                 <div class="side-menu__suggestion-info">
-                  <a href="#">QuantumCode</a>
+                  <a href="#">codeguy</a>
                   <span>Followed by user1 and 9 others</span>
                 </div>
                 <button class="side-menu__suggestion-button">Follow</button>
@@ -1379,7 +1379,7 @@
                   <img src="assets/default-user.png" alt="User Picture" />
                 </a>
                 <div class="side-menu__suggestion-info">
-                  <a href="#">QuantumCode</a>
+                  <a href="#">codeguy</a>
                   <span>Followed by user1 and 3 others</span>
                 </div>
                 <button class="side-menu__suggestion-button">Follow</button>
@@ -1389,7 +1389,7 @@
                   <img src="assets/default-user.png" alt="User Picture" />
                 </a>
                 <div class="side-menu__suggestion-info">
-                  <a href="#">QuantumCode0</a>
+                  <a href="#">codeguy0</a>
                   <span>Followed by user1 and 6 others</span>
                 </div>
                 <button class="side-menu__suggestion-button">Follow</button>
